Rename SCSS file.

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,5 +1,5 @@
 <div class="explore-cell">
   <div ng-repeat="event in exploreEvents">
-    {{event.title}}
+    {{event.announce_date | date : 'medium'}}
   </div>
 </div>
