--- a/app/styles/explore.css
+++ b/app/styles/explore.css
@@ -1,6 +1,45 @@
-/* line 1, explore.css.scss */
-.explore-cell {
+/* line 3, explore.css.scss */
+.explore-cell-container {
+  position: relative;
   background: red;
-  height: 300px;
+  height: 210px;
   width: 100%;
+}
+/* line 8, explore.css.scss */
+.explore-cell-container .photo {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 210px;
+}
+/* line 14, explore.css.scss */
+.explore-cell-container .photo-overlay {
+  height: 210px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(35%, rgba(0, 0, 0, 0)), color-stop(77%, rgba(0, 0, 0, 0.5)), color-stop(100%, rgba(0, 0, 0, 0.74)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
+  /* IE6-9 */
+}
+/* line 28, explore.css.scss */
+.explore-cell-container .event-info {
+  position: absolute;
+  bottom: 0;
+}
+/* line 31, explore.css.scss */
+.explore-cell-container .event-info h2 {
+  color: white;
 }
