--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,23 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  color: #444;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+h4 {
+  font-size: 16px;
+  letter-spacing: 1px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
