finish explore cell text styling

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,23 +2,23 @@
   <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/america-8b6f8a/186/huge.jpg)"></div>
   <div class="photo-overlay"></div>
   <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
+    <h2>Arcade Fire</h2>
+    <h5>Fri, Aug 22, 7:45PM - Barclays Center</h5>
   </div>
 </div>
 <div class="explore-cell-container">
   <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/joseph-and-the-amazing-technicolor-dreamcoat-4cadfa/5461/huge.jpg)"></div>
   <div class="photo-overlay"></div>
   <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
+    <h2>Test a Really Long Header Here And See What</h2>
+    <h5>Fri, Aug 22, 7:45PM - Barclays Center </h5>
   </div>
 </div>
 <div class="explore-cell-container">
   <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/noah-gundersen-522239/22298/huge.jpg)"></div>
   <div class="photo-overlay"></div>
   <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
+    <h2>Jersey Boys - New York</h2>
+    <h5>Fri, Aug 22, 7:45PM - Barclays Center</h5>
   </div>
 </div>
