--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,19 +4,18 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 300;
   color: #444;
 }
 
 h2 {
   font-size: 22px;
-  font-weight: 300;
   letter-spacing: 1px;
 }
 
-h4 {
-  font-size: 16px;
+h5 {
+  font-size: 12px;
   letter-spacing: 1px;
 }
 
