--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -12,17 +12,19 @@
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
-/* line 43, ../src/explore.scss */
+/* line 44, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
   height: 44px;
   border-top: 1px solid #b3c0cc;
   width: 100%;
+  background-color: #fff;
 }
-/* line 50, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -30,7 +32,11 @@
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 57, ../src/explore.scss */
+/* line 59, ../src/explore.scss */
+.sg-footer .footer-icon:last-child {
+  border-right: 0;
+}
+/* line 63, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 32px;
   height: 32px;
@@ -39,34 +45,84 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 67, ../src/explore.scss */
+/* line 73, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
   background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/explore.png);
 }
-/* line 67, ../src/explore.scss */
+/* line 73, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
   background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/search.png);
 }
-/* line 67, ../src/explore.scss */
+/* line 73, ../src/explore.scss */
 .sg-footer .footer-icon .profile-icon {
   background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/profile.png);
 }
-/* line 67, ../src/explore.scss */
+/* line 73, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
   background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/performers.png);
 }
-/* line 67, ../src/explore.scss */
+/* line 73, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
   background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/settings.png);
 }
-/* line 72, ../src/explore.scss */
+/* line 78, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 4px solid #2666b1;
 }
 
-/* line 84, ../src/explore.scss */
-.explore-cell {
-  background: red;
-  height: 300px;
+/* line 86, ../src/explore.scss */
+.container {
   width: 100%;
+  height: 525px;
+  overflow-y: scroll;
+}
+
+/* line 94, ../src/explore.scss */
+.explore-cell-container {
+  position: relative;
+  background: #aaa;
+  height: 210px;
+  width: 100%;
+}
+/* line 99, ../src/explore.scss */
+.explore-cell-container .photo {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 210px;
+}
+/* line 105, ../src/explore.scss */
+.explore-cell-container .photo-overlay {
+  height: 210px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(35%, rgba(0, 0, 0, 0)), color-stop(77%, rgba(0, 0, 0, 0.5)), color-stop(100%, rgba(0, 0, 0, 0.74)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.5) 77%, rgba(0, 0, 0, 0.74) 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
+  /* IE6-9 */
+}
+/* line 119, ../src/explore.scss */
+.explore-cell-container .event-info {
+  position: absolute;
+  bottom: 0;
+}
+/* line 122, ../src/explore.scss */
+.explore-cell-container .event-info h2, .explore-cell-container .event-info h4 {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 100 18px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  color: white;
 }
