--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -38,6 +38,7 @@ $mobileGrayBorder: 1px solid #b3c0cc;
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .sg-footer {
@@ -46,6 +47,7 @@ $mobileGrayBorder: 1px solid #b3c0cc;
   height: 44px;
   border-top: $mobileGrayBorder;
   width: 100%;
+  background-color: #fff;
 
   .footer-icon {
     width: 20%;
@@ -53,6 +55,10 @@ $mobileGrayBorder: 1px solid #b3c0cc;
     box-sizing: border-box;
     border-right: $mobileGrayBorder;
     float: left;
+
+    &:last-child {
+      border-right: 0;
+    }
 
     .icon {
       width: 32px;
@@ -78,11 +84,44 @@ $mobileGrayBorder: 1px solid #b3c0cc;
 
 
 .container {
-
+  width: 100%;
+  height: 525px;
+  overflow-y: scroll;
 }
 
-.explore-cell {
-  background: red;
-  height: 300px;
+$exploreCellHeight: 210px;
+
+.explore-cell-container {
+  position: relative;
+  background: #aaa;
+  height: $exploreCellHeight;
   width: 100%;
+  .photo {
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: $exploreCellHeight;
+  }
+  .photo-overlay {
+    height: $exploreCellHeight;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0) 35%, rgba(0,0,0,0.5) 77%, rgba(0,0,0,0.74) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(0,0,0,0)), color-stop(77%,rgba(0,0,0,0.5)), color-stop(100%,rgba(0,0,0,0.74))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 10%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 ); /* IE6-9 */
+  }
+  .event-info {
+    position: absolute;
+    bottom: 0;
+    h2, h4 {
+      @include font-stack($size: 18px, $weight: 100);
+      color: white;
+    }
+  }
 }
