--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,24 +1,11 @@
-<div class="explore-cell-container">
-  <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/america-8b6f8a/186/huge.jpg)"></div>
-  <div class="photo-overlay"></div>
-  <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
+<div class="explore-view" ng-repeat="event in exploreEvents">
+  <div class="explore-cell-container">
+    <div class="photo" ng-style="{'background-image': 'url(' + event.performers[0].images.huge +')'}"></div>
+    <div class="photo-overlay"></div>
+    <div class="event-info">
+      <h2>Header 1 Goes Here</h2>
+      <h4>This is the date</h4>
+    </div>
   </div>
 </div>
-<div class="explore-cell-container">
-  <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/joseph-and-the-amazing-technicolor-dreamcoat-4cadfa/5461/huge.jpg)"></div>
-  <div class="photo-overlay"></div>
-  <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
-  </div>
-</div>
-<div class="explore-cell-container">
-  <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/noah-gundersen-522239/22298/huge.jpg)"></div>
-  <div class="photo-overlay"></div>
-  <div class="event-info">
-    <h2>Header 1 Goes Here</h2>
-    <h4>This is the date</h4>
-  </div>
-</div>
+
