--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -89,11 +89,12 @@ $mobileGrayBorder: 1px solid #b3c0cc;
   overflow-y: scroll;
 }
 
-$exploreCellHeight: 210px;
+$exploreCellHeight: 205px;
+$fontFamily:'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 
 .explore-cell-container {
   position: relative;
-  background: #aaa;
+  background: #333;
   height: $exploreCellHeight;
   width: 100%;
   .photo {
@@ -108,20 +109,41 @@ $exploreCellHeight: 210px;
     position: absolute;
     top: 0;
     left: 0;
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0) 35%, rgba(0,0,0,0.5) 77%, rgba(0,0,0,0.74) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(0,0,0,0)), color-stop(77%,rgba(0,0,0,0.5)), color-stop(100%,rgba(0,0,0,0.74))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 10%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 35%,rgba(0,0,0,0.5) 77%,rgba(0,0,0,0.74) 100%); /* W3C */
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 35%, rgba(0,0,0,0.65) 77%, rgba(0,0,0,0.85) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(0,0,0,0.2)), color-stop(77%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0.85))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 10%,rgba(0,0,0,0.65) 77%,rgba(0,0,0,0.85) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 35%,rgba(0,0,0,0.65) 77%,rgba(0,0,0,0.85) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 35%,rgba(0,0,0,0.65) 77%,rgba(0,0,0,0.85) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 35%,rgba(0,0,0,0.65) 77%,rgba(0,0,0,0.85) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 ); /* IE6-9 */
   }
   .event-info {
     position: absolute;
-    bottom: 0;
-    h2, h4 {
-      @include font-stack($size: 18px, $weight: 100);
+    bottom: 18px;
+    left: 18px;
+    h2 {
+      font-family: $fontFamily;
+      font-weight: 100;
       color: white;
+      margin-bottom: 3px;
     }
+    h5 {
+      font-family: $fontFamily;
+      font-weight: 100;
+      color: #EEE;
+    }
+  }
+  .heart {
+    background: url(/images/unfilled-heart.png);
+    background-size: 23px 21px;
+    width: 23px;
+    height: 21px;
+    position: absolute;
+    top: 18px;
+    right: 18px;
+  }
+  .heart.filled {
+    background: url(/images/filled-heart.png);
+    background-size: 23px 21px;
   }
 }
