Fix merge conflicts

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,7 +2,7 @@
   <div class="explore-cell-container">
     <div class="photo" ng-style="{'background-image': 'url(' + event.performers[0].images.huge +')'}"></div>
     <div class="photo-overlay"></div>
-    <div class="heart"></div>
+    <div class="heart filled"></div>
     <div class="event-info">
       <h2>{{ event.performers[0].name }}</h2>
       <h5>Fri, Aug 22, 7:45PM - Barclays Center</h5>
