--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -3,7 +3,7 @@
   color: #fff;
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font: 500 18px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font: 500 18px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 100%;
   letter-spacing: 0.5px;
   padding: 10px 0;
@@ -77,21 +77,21 @@
   overflow-y: scroll;
 }
 
-/* line 95, ../src/explore.scss */
+/* line 94, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 100, ../src/explore.scss */
+/* line 99, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 106, ../src/explore.scss */
+/* line 105, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -113,26 +113,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 120, ../src/explore.scss */
-.explore-cell-container .event-info {
-  position: absolute;
-  bottom: 18px;
-  left: 18px;
-}
-/* line 124, ../src/explore.scss */
-.explore-cell-container .event-info h2 {
-  font-family: "HelveticaNeue-UltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  color: white;
-  margin-bottom: 3px;
-}
-/* line 130, ../src/explore.scss */
-.explore-cell-container .event-info h5 {
-  font-family: "HelveticaNeue-UltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  color: #EEE;
-}
-/* line 136, ../src/explore.scss */
+/* line 119, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -142,7 +123,46 @@
   top: 18px;
   right: 18px;
 }
-/* line 145, ../src/explore.scss */
+/* line 128, ../src/explore.scss */
+.explore-cell-container .heart.filled {
+  background: url(/images/filled-heart.png);
+  background-size: 23px 21px;
+}
+/* line 132, ../src/explore.scss */
+.explore-cell-container .event-info {
+  position: absolute;
+  bottom: 18px;
+  left: 18px;
+}
+/* line 136, ../src/explore.scss */
+.explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 100 24px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  letter-spacing: 1px;
+  color: white;
+  margin-bottom: 3px;
+}
+/* line 142, ../src/explore.scss */
+.explore-cell-container .event-info h5 {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 100 13px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  color: #EEE;
+}
+/* line 147, ../src/explore.scss */
+.explore-cell-container .heart {
+  background: url(/images/unfilled-heart.png);
+  background-size: 23px 21px;
+  width: 23px;
+  height: 21px;
+  position: absolute;
+  top: 18px;
+  right: 18px;
+}
+/* line 156, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
