--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -1,5 +1,5 @@
 $fontStackHeader : 'Proxima Nova', proxima-nova-1, proxima-nova-2, 'Helvetica Neue', Arial, Helvetica, sans-serif;
-$fontStackBody   : 'Helvetica Neue', Arial, Helvetica, sans-serif;
+$fontStackBody   : 'HelveticaNeue-UltraLight', 'Helvetica Neue Ultra Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 $fontSize        : 13px;
 $fontHeight      : 100%;
 $fontWeight      : 400;
@@ -90,7 +90,6 @@ $mobileGrayBorder: 1px solid #b3c0cc;
 }
 
 $exploreCellHeight: 205px;
-$fontFamily:'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 
 .explore-cell-container {
   position: relative;
@@ -117,19 +116,31 @@ $fontFamily:'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica 
     background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 35%,rgba(0,0,0,0.65) 77%,rgba(0,0,0,0.85) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 ); /* IE6-9 */
   }
+  .heart {
+    background: url(/images/unfilled-heart.png);
+    background-size: 23px 21px;
+    width: 23px;
+    height: 21px;
+    position: absolute;
+    top: 18px;
+    right: 18px;
+  }
+  .heart.filled {
+    background: url(/images/filled-heart.png);
+    background-size: 23px 21px;
+  }
   .event-info {
     position: absolute;
     bottom: 18px;
     left: 18px;
-    h2 {
-      font-family: $fontFamily;
-      font-weight: 100;
+    h2, h5 {
+      @include font-stack($size: 24px, $weight: 100);
+      letter-spacing: 1px;
       color: white;
       margin-bottom: 3px;
     }
     h5 {
-      font-family: $fontFamily;
-      font-weight: 100;
+      @include font-stack($size: 13px, $weight: 100);
       color: #EEE;
     }
   }
