--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -1,21 +1,24 @@
-/* line 31, ../src/explore.scss */
+/* line 26, ../src/explore.scss */
+body {
+  height: 100%;
+}
+
+/* line 35, ../src/explore.scss */
 .sg-header {
   color: #fff;
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font: 500 18px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font: 500 18px "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 100%;
   letter-spacing: 0.5px;
   padding: 10px 0;
   text-align: center;
   background-color: rgba(22, 81, 150, 0.96);
-  position: absolute;
-  top: 0;
   width: 100%;
   z-index: 100;
 }
 
-/* line 44, ../src/explore.scss */
+/* line 46, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
@@ -24,7 +27,7 @@
   width: 100%;
   background-color: #fff;
 }
-/* line 52, ../src/explore.scss */
+/* line 54, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -32,11 +35,11 @@
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 59, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon:last-child {
   border-right: 0;
 }
-/* line 63, ../src/explore.scss */
+/* line 65, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 32px;
   height: 32px;
@@ -45,27 +48,27 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 73, ../src/explore.scss */
+/* line 75, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
-  background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/explore.png);
+  background-image: url(/images/explore.png);
 }
-/* line 73, ../src/explore.scss */
+/* line 75, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
-  background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/search.png);
+  background-image: url(/images/search.png);
 }
-/* line 73, ../src/explore.scss */
-.sg-footer .footer-icon .profile-icon {
-  background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/profile.png);
+/* line 75, ../src/explore.scss */
+.sg-footer .footer-icon .events-icon {
+  background-image: url(/images/events.png);
 }
-/* line 73, ../src/explore.scss */
+/* line 75, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
-  background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/performers.png);
+  background-image: url(/images/performers.png);
 }
-/* line 73, ../src/explore.scss */
+/* line 75, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
-  background-image: url(https://s3.amazonaws.com/uploads.hipchat.com/13429/548128/RrQvvmLQJsEKYTT/settings.png);
+  background-image: url(/images/settings.png);
 }
-/* line 78, ../src/explore.scss */
+/* line 80, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 4px solid #2666b1;
 }
@@ -73,25 +76,26 @@
 /* line 86, ../src/explore.scss */
 .container {
   width: 100%;
-  height: 525px;
+  height: 500px;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
-/* line 94, ../src/explore.scss */
+/* line 95, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 99, ../src/explore.scss */
+/* line 100, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 105, ../src/explore.scss */
+/* line 106, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -113,7 +117,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 119, ../src/explore.scss */
+/* line 120, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -123,18 +127,18 @@
   top: 18px;
   right: 18px;
 }
-/* line 128, ../src/explore.scss */
+/* line 129, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
 }
-/* line 132, ../src/explore.scss */
+/* line 133, ../src/explore.scss */
 .explore-cell-container .event-info {
   position: absolute;
   bottom: 18px;
   left: 18px;
 }
-/* line 136, ../src/explore.scss */
+/* line 137, ../src/explore.scss */
 .explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -144,7 +148,7 @@
   color: white;
   margin-bottom: 3px;
 }
-/* line 142, ../src/explore.scss */
+/* line 143, ../src/explore.scss */
 .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -152,7 +156,7 @@
   line-height: 100%;
   color: #EEE;
 }
-/* line 147, ../src/explore.scss */
+/* line 148, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -162,7 +166,7 @@
   top: 18px;
   right: 18px;
 }
-/* line 156, ../src/explore.scss */
+/* line 157, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
