--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,3 +1,6 @@
+<header class="sg-header">
+  Explore
+</header>
 <div class="explore-view" ng-repeat="event in exploreEvents">
   <div class="explore-cell-container">
     <div class="photo" ng-style="{'background-image': 'url(' + event.performers[0].images.huge +')'}"></div>
