Search result styling

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,6 +1,7 @@
 <header class="sg-header">
   Explore
 </header>
+<div style="margin-top: 48px;"></div>
 <div class="explore-view" ng-repeat="event in exploreEvents">
   <div class="explore-cell-container">
     <div class="photo" ng-style="{'background-image': 'url(' + event.performers[0].images.huge +')'}"></div>
