--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,2 +1,67 @@
-<p>Things and stuff</p>
-<p>{{ searchResults }}</p>
+<header class="sg-header">
+  Search
+</header>
+<div style="margin-top: 48px;"></div>
+<div class="category-divider">
+  <h5>Performers</h5>
+</div>
+<div class="search-cell">
+  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/1436/phish-f48244/medium.jpg)"></div>
+  <div class="search-details"><h3>Phish</h3></div>
+</div>
+<div class="search-cell">
+  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/5137/arcade-fire-f63c10/medium.jpg)"></div>
+  <div class="search-details"><h3>Arcade Fire</h3></div>
+</div>
+<div class="search-cell">
+  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/4275/bruce-springsteen-49a1bd/medium.jpg)"></div>
+  <div class="search-details"><h3>Bruce Springsteen</h3></div>
+</div>
+<div class="category-divider">
+  <h5>Venues</h5>
+</div>
+<div class="search-cell">
+  <div class="search-image" style="background: url(http://maps.googleapis.com/maps/api/staticmap?center=40.6844,-73.9777&zoom=11&size=140x90&sensor=false)"></div>
+  <div class="search-details"><h3>Barclays Center</h3></div>
+</div>
+<div class="search-cell">
+  <div class="search-image" style="background: url(http://maps.googleapis.com/maps/api/staticmap?center=40.75,-73.9942&zoom=11&size=140x90&sensor=false)"></div>
+  <div class="search-details"><h3>Madison Square Garden</h3></div>
+</div>
+<div class="category-divider">
+  <h5>Events Near New York, NY</h5>
+</div>
+<div class="search-cell">
+  <div class="search-event-date">
+    <h4>Mar 6</h4>
+    <h5>Thu 7:00p</h5>
+  </div>
+  <div class="search-event-details">
+    <h4>Lorde with Log-Fang</h4>
+    <h5>Roseland Ballroom, New York, NY</h5>
+  </div>  
+</div>
+<div class="search-cell">
+  <div class="search-event-date">
+    <h4>Mar 7</h4>
+    <h5>Fri 8:30p</h5>
+  </div>
+  <div class="search-event-details">
+    <h4>Lorde with Log-Fang</h4>
+    <h5>Roseland Ballroom, New York, NY</h5>
+  </div>  
+</div>
+<div class="search-cell">
+  <div class="search-event-date">
+    <h4>Mar 7</h4>
+    <h5>TBA</h5>
+  </div>
+  <div class="search-event-details">
+    <h4>Lorde with Log-Fang</h4>
+    <h5>Roseland Ballroom, New York, NY</h5>
+  </div>  
+</div>
+
+
+
+
