--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -11,14 +11,16 @@ body {
   font: 500 18px "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 100%;
   letter-spacing: 0.5px;
-  padding: 10px 0;
+  padding: 15px 0;
   text-align: center;
   background-color: rgba(22, 81, 150, 0.96);
   width: 100%;
   z-index: 100;
+  position: absolute;
+  top: 0;
 }
 
-/* line 46, ../src/explore.scss */
+/* line 48, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
@@ -27,7 +29,7 @@ body {
   width: 100%;
   background-color: #fff;
 }
-/* line 54, ../src/explore.scss */
+/* line 56, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -35,11 +37,11 @@ body {
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 61, ../src/explore.scss */
+/* line 63, ../src/explore.scss */
 .sg-footer .footer-icon:last-child {
   border-right: 0;
 }
-/* line 65, ../src/explore.scss */
+/* line 67, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 32px;
   height: 32px;
@@ -48,32 +50,32 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 75, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
   background-image: url(/images/explore.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
   background-image: url(/images/search.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .sg-footer .footer-icon .events-icon {
   background-image: url(/images/events.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
   background-image: url(/images/performers.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
   background-image: url(/images/settings.png);
 }
-/* line 80, ../src/explore.scss */
+/* line 82, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 4px solid #2666b1;
 }
 
-/* line 86, ../src/explore.scss */
+/* line 88, ../src/explore.scss */
 .container {
   width: 100%;
   height: 500px;
@@ -81,21 +83,21 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
-/* line 95, ../src/explore.scss */
+/* line 97, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 100, ../src/explore.scss */
+/* line 102, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 106, ../src/explore.scss */
+/* line 108, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -117,7 +119,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 120, ../src/explore.scss */
+/* line 122, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -127,18 +129,18 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 129, ../src/explore.scss */
+/* line 131, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
 }
-/* line 133, ../src/explore.scss */
+/* line 135, ../src/explore.scss */
 .explore-cell-container .event-info {
   position: absolute;
   bottom: 18px;
   left: 18px;
 }
-/* line 137, ../src/explore.scss */
+/* line 139, ../src/explore.scss */
 .explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -148,7 +150,7 @@ body {
   color: white;
   margin-bottom: 3px;
 }
-/* line 143, ../src/explore.scss */
+/* line 145, ../src/explore.scss */
 .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -156,7 +158,7 @@ body {
   line-height: 100%;
   color: #EEE;
 }
-/* line 148, ../src/explore.scss */
+/* line 150, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -166,7 +168,7 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 157, ../src/explore.scss */
+/* line 159, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
