--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -1,27 +1,4 @@
-$fontStackHeader : 'Helvetica Neue', Arial, Helvetica, sans-serif;
-$fontStackBody   : 'HelveticaNeue-UltraLight', 'Helvetica Neue Ultra Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-$fontSize        : 13px;
-$fontHeight      : 100%;
-$fontWeight      : 400;
-
-@mixin font-stack($header: false, $size: $fontSize, $lineHeight: $fontHeight, $weight: $fontWeight) {
-  -webkit-font-smoothing: subpixel-antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  @if $header {
-    font: $weight $size $fontStackHeader;
-  } @else {
-    font: $weight $size $fontStackBody;
-  }
-  // Sass interprets anything with a / as division, so separate out the line height.
-  @if $lineHeight {
-    line-height: $lineHeight;
-  }
-}
-
-@mixin dimensions($width, $height) {
-  width: $width;
-  height: $height;
-}
+@import "common";
 
 body {
   height: 100%;
@@ -85,9 +62,14 @@ $mobileGrayBorder: 1px solid #b3c0cc;
 
 .container {
   width: 100%;
-  height: 500px;
-  overflow-y: scroll;
+  height: calc(100% - 44px);
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
+
+  .explore-view {
+    height: calc(100% - 39px);
+    overflow-y: auto;
+  }
 }
 
 $exploreCellHeight: 205px;
