--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -1,9 +1,14 @@
-/* line 26, ../src/explore.scss */
+/* line 44, ../src/common.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 3, ../src/explore.scss */
 body {
   height: 100%;
 }
 
-/* line 35, ../src/explore.scss */
+/* line 12, ../src/explore.scss */
 .sg-header {
   color: #fff;
   -webkit-font-smoothing: subpixel-antialiased;
@@ -18,7 +23,7 @@ body {
   z-index: 100;
 }
 
-/* line 46, ../src/explore.scss */
+/* line 23, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
@@ -27,7 +32,7 @@ body {
   width: 100%;
   background-color: #fff;
 }
-/* line 54, ../src/explore.scss */
+/* line 31, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -35,11 +40,11 @@ body {
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 61, ../src/explore.scss */
+/* line 38, ../src/explore.scss */
 .sg-footer .footer-icon:last-child {
   border-right: 0;
 }
-/* line 65, ../src/explore.scss */
+/* line 42, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 32px;
   height: 32px;
@@ -48,54 +53,59 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 75, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
   background-image: url(/images/explore.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
   background-image: url(/images/search.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .events-icon {
   background-image: url(/images/events.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
   background-image: url(/images/performers.png);
 }
-/* line 75, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
   background-image: url(/images/settings.png);
 }
-/* line 80, ../src/explore.scss */
+/* line 57, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 4px solid #2666b1;
 }
 
-/* line 86, ../src/explore.scss */
+/* line 63, ../src/explore.scss */
 .container {
   width: 100%;
-  height: 500px;
-  overflow-y: scroll;
+  height: calc(100% - 44px);
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
+/* line 69, ../src/explore.scss */
+.container .explore-view {
+  height: calc(100% - 39px);
+  overflow-y: auto;
+}
 
-/* line 95, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 100, ../src/explore.scss */
+/* line 82, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 106, ../src/explore.scss */
+/* line 88, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -117,7 +127,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 120, ../src/explore.scss */
+/* line 102, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -127,18 +137,18 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 129, ../src/explore.scss */
+/* line 111, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
 }
-/* line 133, ../src/explore.scss */
+/* line 115, ../src/explore.scss */
 .explore-cell-container .event-info {
   position: absolute;
   bottom: 18px;
   left: 18px;
 }
-/* line 137, ../src/explore.scss */
+/* line 119, ../src/explore.scss */
 .explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -148,7 +158,7 @@ body {
   color: white;
   margin-bottom: 3px;
 }
-/* line 143, ../src/explore.scss */
+/* line 125, ../src/explore.scss */
 .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -156,7 +166,7 @@ body {
   line-height: 100%;
   color: #EEE;
 }
-/* line 148, ../src/explore.scss */
+/* line 130, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -166,7 +176,7 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 157, ../src/explore.scss */
+/* line 139, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
