Tweak search styling

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="category-divider">
-    <h5>Events Near New York, NY</h5>
+    <h5>Events</h5>
   </div>
   <div class="search-cells nearby-cells" ng-repeat="event in searchResults.events">
     <div class="search-cell">
