--- a/app/views/performer.html
+++ b/app/views/performer.html
@@ -1,72 +1,22 @@
 <header class="sg-header">
-  Bruce Springsteen
+  {{ performer.name }}
 </header>
-<div style="margin-top: 48px;"></div>
 <div class="performer-splash-container">
-  <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/bruce-springsteen-7f0bf6/4275/huge.jpg)"></div>
+  <div class="photo" ng-style="{'background-image': 'url(' + performer.image + ')'}"></div>
   <div class="photo-overlay"></div>
 </div>
 <div class="category-divider">
   <h5>Events Near New York, NY</h5>
 </div>
-
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 6</h4>
-    <h5>Thu 7:00p</h5>
+<div class="search-cells performer-cells" ng-repeat="event in performerEvents">
+  <div class="search-cell">
+    <div class="search-event-date">
+      <h4>{{ event.datetime_local | date:'MMM d' }}</h4>
+      <h5>{{ event.datetime_local | date:'EEE h:mm a' }}</h5>
+    </div>
+    <div class="search-event-details">
+      <h4>{{ event.short_title }}</h4>
+      <h5>{{ event.venue.name }}, {{ event.venue.display_location }}</h5>
+    </div>
   </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>Fri 8:30p</h5>
-  </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>TBA</h5>
-  </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 6</h4>
-    <h5>Thu 7:00p</h5>
-  </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>Fri 8:30p</h5>
-  </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>TBA</h5>
-  </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
-  </div>  
 </div>
