--- a/app/styles/lib/main.css
+++ b/app/styles/lib/main.css
@@ -2,6 +2,12 @@
 body {
 }
 
+#sg-map {
+  width: 100%;
+  height: 388px;
+  position: absolute;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
