--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,6 +1,7 @@
 <header class="sg-header search-header">
   <input type="text" class="search-bar" ng-model="searchText"
          ng-change="getSuggestions()"
+         autofocus="autofocus"
          placeholder="Search by performer, event, or venue">
 </header>
 <div class="search-view">
