Make listings service.

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,2 +1,9 @@
-<p>This is the map view.</p>
-<div id="sg-map"></div>
+<header class="sg-header explore-header">
+  {{ event.short_title }}
+</header>
+<div class="sg-map-container">
+  <div id="sg-map"></div>
+</div>
+<div class="event-listings">
+  {{ listingsData. }}
+</div>
