--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,4 +1,5 @@
 <header class="sg-header search-header">
+  <img src="/images/search.png">
   <input type="text" class="search-bar" ng-model="searchText"
          ng-change="getSuggestions()"
          autofocus="autofocus"
