--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -20,6 +20,13 @@ $mobileGrayBorder: 1px solid #b3c0cc;
   z-index: 100;
 }
 
+.explore-header img {
+  width: 22px;
+  position: absolute;
+  right: 15px;
+  top: 14px;
+}
+
 .sg-footer {
   position: absolute;
   bottom: 0;
