--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,5 +1,8 @@
 <header class="sg-header explore-header">
   Explore
+  <a href="/#/search">
+    <img src="/images/search-white.png">
+  </a>
 </header>
 <div class="explore-view">
   <div class="explore-cells" ng-repeat="event in exploreEvents">
